[tool.poetry]
name = "habits-tracker"
version = "0.1.0"
description = ""
authors = ["0djentd <58089540+0djentd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "habits_tracker"}]

[tool.poetry.scripts]
habit = "habits_tracker.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
click = "^8.1.3"
appdirs = "^1.4.4"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
